Sync all content

--- a/content/resources/mit20_441jf09_hw1.md
+++ b/content/resources/mit20_441jf09_hw1.md
@@ -7,6 +7,7 @@ description: Homework assignment on the unit cell processes that are responsible
   to bone.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/20-441j-biomaterials-tissue-interactions-fall-2009/aad0da469b6ac9a86755337c7ab0166d_MIT20_441JF09_hw1.pdf
 file_type: application/pdf
+parent_uid: 6bc09401-2cd6-5d36-9e6b-a5aa67366140
 resourcetype: Document
 title: 'Homework #1'
 uid: aad0da46-9b6a-c9a8-6755-337c7ab0166d
