--- a/content/resources/mit20_441jf09_hw2.md
+++ b/content/resources/mit20_441jf09_hw2.md
@@ -5,6 +5,7 @@ description: Homework assignment on cell adhesion, the role of integrins in woun
   porous coating for orthopaedic implants.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/20-441j-biomaterials-tissue-interactions-fall-2009/785ba62b7bb001b155e5b8b9efe6d2cc_MIT20_441JF09_hw2.pdf
 file_type: application/pdf
+parent_uid: 6bc09401-2cd6-5d36-9e6b-a5aa67366140
 resourcetype: Document
 title: 'Homework #2'
 uid: 785ba62b-7bb0-01b1-55e5-b8b9efe6d2cc
