--- a/content/resources/mit20_441jf09_hw4.md
+++ b/content/resources/mit20_441jf09_hw4.md
@@ -4,6 +4,7 @@ description: Homework assignment on the development of cell and biomaterial scaf
   products for treating defects in articular cartilage and bone.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/20-441j-biomaterials-tissue-interactions-fall-2009/38d75292b1ae58c1d8bea5bca5e9c22e_MIT20_441JF09_hw4.pdf
 file_type: application/pdf
+parent_uid: 6bc09401-2cd6-5d36-9e6b-a5aa67366140
 resourcetype: Document
 title: 'Homework #4'
 uid: 38d75292-b1ae-58c1-d8be-a5bca5e9c22e
