--- a/content/resources/mit20_441jf09_hw6.md
+++ b/content/resources/mit20_441jf09_hw6.md
@@ -6,6 +6,7 @@ description: Homework assignment on polymers that can result in chemical bonding
   material.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/20-441j-biomaterials-tissue-interactions-fall-2009/459bd85e2701b0624c7c1d04297d2fb7_MIT20_441JF09_hw6.pdf
 file_type: application/pdf
+parent_uid: 6bc09401-2cd6-5d36-9e6b-a5aa67366140
 resourcetype: Document
 title: 'Homework #6'
 uid: 459bd85e-2701-b062-4c7c-1d04297d2fb7
