--- a/content/resources/mit20_441jf09_hw7.md
+++ b/content/resources/mit20_441jf09_hw7.md
@@ -5,6 +5,7 @@ description: Homework assignment on a system consisting of fibroblasts supported
   tests for cell-cooperativity.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/20-441j-biomaterials-tissue-interactions-fall-2009/d42364920eef3041a86450aec801fc63_MIT20_441JF09_hw7.pdf
 file_type: application/pdf
+parent_uid: 6bc09401-2cd6-5d36-9e6b-a5aa67366140
 resourcetype: Document
 title: 'Homework #7'
 uid: d4236492-0eef-3041-a864-50aec801fc63
