--- a/content/resources/mit20_441jf09_hw8.md
+++ b/content/resources/mit20_441jf09_hw8.md
@@ -5,6 +5,7 @@ description: Homework assignment on using a new hypothetical mechanism for tissu
   approaches to regeneration.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/20-441j-biomaterials-tissue-interactions-fall-2009/a8c459d559a5191ebd235475797fede1_MIT20_441JF09_hw8.pdf
 file_type: application/pdf
+parent_uid: 6bc09401-2cd6-5d36-9e6b-a5aa67366140
 resourcetype: Document
 title: 'Homework #8'
 uid: a8c459d5-59a5-191e-bd23-5475797fede1
